Avoid a crash when QClipboard::mimeData returns nullptr

BUG: 463674